# UniversalAPI-microservice-template

./: CLAUDE.md  README.md
.github/workflows/: alpine-release.yml  release.yml  test.yml
Alpine.js/: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf
Alpine.js/src/: index.html
docs/: deployment.md  secrets-management.md
python/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
python/.github/workflows/: release.yml  test.yml
python/app/: __init__.py  config.py  main.py  version.py
python/tests/: conftest.py  test_e2e.py  test_health.py
